--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -4,36 +4,7 @@ spring:
     - default
 ---
 server:
-  port: 18768
-
-spring:
-  profiles: default
-  application:
-    name: careerpeak-member
-  datasource:
-    url: jdbc:mysql://39.101.179.31/careerpeak-member?useUnicode=true&useOldAliasMetadataBehavior=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-    username: root
-    password: new_password
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  redis:
-    host: 39.101.179.31
-    password: yy7943RMB
-    port: 6379
-    timeout: 10000
-
-
-ribbon:
-  ReadTimeout: 10000
-  # 同一实例最大重试次数，不包括首次调用。默认值为0
-  MaxAutoRetries: 0
-  # 同一个微服务其他实例的最大重试次数，不包括第一次调用的实例。默认值为1
-  MaxAutoRetriesNextServer: 0
-  # 是否所有操作（GET、POST等）都允许重试。默认值为false
-  OkToRetryOnAllOperations: false
-
-
-mybatis:
-  mapper-locations: classpath:mapper/*.xml
+  port: 9004
 
 eureka:
   client:
@@ -42,6 +13,28 @@ eureka:
   instance:
     lease-expiration-duration-in-seconds: 60 #服务过期时间配置,超过这个时间没有接收到心跳EurekaServer就会将这个实例剔除
     lease-renewal-interval-in-seconds: 3 #服务刷新时间配置，每隔这个时间会主动心跳一次
+
+spring:
+  profiles: default
+  application:
+    name: gy-user
+  datasource:
+    url: jdbc:mysql://localhost/gy-user?useUnicode=true&useOldAliasMetadataBehavior=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    username: root
+    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 127.0.0.1
+    password:
+    port: 7000
+    timeout: 10000
+
+
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+
+
 
 management:
   endpoints:
