--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -31,10 +31,23 @@ spring:
 
 
 
-mybatis:
+mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
-
-
+  type-aliases-package: com.gy.entity
+  global-config:
+    db-config:
+      id-type: auto
+      field-strategy: not_empty
+      #驼峰下划线转换
+      column-underline: true
+      #逻辑删除配置
+      logic-delete-value: 0
+      logic-not-delete-value: 1
+      db-type: mysql
+    refresh: false
+  configuration:
+    map-underscore-to-camel-case: true
+    cache-enabled: false
 
 management:
   endpoints:
