--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -42,8 +42,8 @@ mybatis-plus:
       column-underline: true
       db-type: mysql
       #逻辑删除配置
-      logic-delete-value: 1
-      logic-not-delete-value: 0
+#      logic-delete-value: 1
+#      logic-not-delete-value: 0
     refresh: false
   configuration:
     map-underscore-to-camel-case: true
