--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -28,6 +28,15 @@ spring:
     password:
     port: 7000
     timeout: 10000
+    cluster:
+      nodes: 127.0.0.1:7000,127.0.0.1:7001,127.0.0.1:7002
+      max-redirects: 3
+    jedis:
+      pool:
+        max-wait: 2000
+        max-active: 32
+        max-idle: 16
+        min-idle: 8
 
 
 
