--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -83,3 +83,7 @@ logback:
   path: /Users/mac/Documents/work/log
   level: INFO
   moduleName: ${spring.application.name}
+
+user:
+  name: jack
+  age: 27
