--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -40,7 +40,7 @@ spring:
     kafka:
       bootstrap-servers: localhost:9092
       consumer:
-        group-id: myGroup
+        group-id: SpringCloud-bus
         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
         value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       producer:
@@ -48,6 +48,10 @@ spring:
         value-serializer: org.apache.kafka.common.serialization.StringSerializer
       listener:
         missing-topics-fatal: false
+  cloud:
+    bus:
+      refresh:
+        enabled: true
 
 
 
