--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -37,24 +37,23 @@ spring:
         max-active: 32
         max-idle: 16
         min-idle: 8
-    cloud:
-      stream:
-        kafka:
-          binder:
-            brokers: localhost:9092
+#    cloud:
+#      stream:
+#        kafka:
+#          binder:
+#            brokers: localhost:9092
 
-#    kafka:
-#      bootstrap-servers: localhost:9092
-#      consumer:
-#        group-id: myGroup
-#        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#      producer:
-#        key-serializer: org.apache.kafka.common.serialization.StringSerializer
-#        value-serializer: org.apache.kafka.common.serialization.StringSerializer
-#      listener:
-#        missing-topics-fatal: false
-
+    kafka:
+      bootstrap-servers: localhost:9092
+      consumer:
+        group-id: myGroup
+        key-deserializer: org.apache.kafka.common.serialization.ByteArraySerializer
+        value-deserializer: org.apache.kafka.common.serialization.ByteArraySerializer
+      producer:
+        key-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
+        value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
+      listener:
+        missing-topics-fatal: false
 
 
 
