--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -78,6 +78,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
 
 management:
+  security:
+    enabled: false
   endpoints:
     web:
       exposure:
@@ -92,4 +94,4 @@ logback:
 
 user:
   name: jack
-  age: 32
+  age: 27
