--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -42,8 +42,12 @@ spring:
       uri: http://127.0.0.1:9002
       name: user
       profile: default
+      discovery:
+        service-id: gy-config
+        enabled: true
     bus:
-      enabled: true
+      refresh:
+        enabled: true
   kafka:
     bootstrap-servers: localhost:9092
 #    consumer:
@@ -82,7 +86,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: '*'
 
 
 ## 日志配置
@@ -93,4 +97,4 @@ logback:
 
 user:
   name: jack
-  age: 30
+  age: 27
