--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -91,3 +91,7 @@ logback:
   path: /Users/mac/Documents/work/log
   level: INFO
   moduleName: ${spring.application.name}
+  
+user:
+  name: guoyu
+  age: 27
