--- a/config-repo/user-default.yml
+++ b/config-repo/user-default.yml
@@ -18,6 +18,8 @@ spring:
   profiles: default
   application:
     name: gy-user
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     url: jdbc:mysql://localhost/gy-user?useUnicode=true&useOldAliasMetadataBehavior=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
     username: root
@@ -84,6 +86,27 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
+
+#负载均衡
+ribbon:
+  ReadTimeout: 30000 #读取超时设置3秒
+  eureka:
+    enabled: true
+
+feign:  #远程调用开启熔断器
+  hystrix:
+    enabled: true
+
+
+#hystrix熔断器配置 配置
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 10000  #设置熔断超时时间10秒
+          strategy: SEMAPHORE
 
 
 ## 日志配置
